tests/ft/invalid/types/typecheck_error.jk
mut a = 15;
a = false
